--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4165,39 +4165,43 @@ body {
 .cid-qFG8EhpwKT H2 {
   text-align: center;
 }
-.cid-qFG8O1lWBi {
-  padding-top: 60px;
+.cid-qFGy94lwYp {
+  padding-top: 45px;
   padding-bottom: 120px;
   background-color: #ffffff;
 }
-.cid-qFG8O1lWBi .mbr-section-subtitle {
+.cid-qFGy94lwYp .mbr-section-subtitle {
   color: #767676;
 }
-.cid-qFG8O1lWBi .media-row {
+.cid-qFGy94lwYp .media-row {
   display: flex;
   justify-content: center;
 }
-.cid-qFG8O1lWBi .team-item {
+.cid-qFGy94lwYp .team-item {
   transition: all .2s;
   margin-bottom: 2rem;
 }
-.cid-qFG8O1lWBi .team-item .item-image img {
+.cid-qFGy94lwYp .team-item .item-image img {
   width: 100%;
 }
-.cid-qFG8O1lWBi .team-item .item-name p {
+.cid-qFGy94lwYp .team-item .item-name p {
   margin-bottom: 0;
 }
-.cid-qFG8O1lWBi .team-item .item-role p {
+.cid-qFGy94lwYp .team-item .item-role p {
   margin-bottom: 0;
 }
-.cid-qFG8O1lWBi .team-item .item-social {
+.cid-qFGy94lwYp .team-item .item-social {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-.cid-qFG8O1lWBi .team-item .item-social .socicon {
+.cid-qFGy94lwYp .team-item .item-social .socicon {
   color: #232323;
   font-size: 17px;
+}
+.cid-qFGy94lwYp P {
+  text-align: center;
+  color: #232323;
 }
 .cid-qFG8XpTXRP {
   padding-top: 15px;
