--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1364,7 +1364,7 @@ body {
   min-height: 100vh;
 }
 .cid-qCAs6O005L {
-  background-image: url("../../../assets/images/webvera-1920x1080.jpg");
+  background-image: url("../../../assets/images/snelbouwsteen-conceptidee-def-2000x1414.jpg");
 }
 .cid-qCAs6O005L .icons-media-container {
   display: flex;
@@ -1792,88 +1792,31 @@ body {
 .cid-qFG3y5x1q4 H2 {
   text-align: center;
 }
-.cid-qFG3B51m2l {
-  padding-top: 15px;
+.cid-qGKvgesi8n {
+  padding-top: 60px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-qFG3B51m2l h4 {
+.cid-qGKvgesi8n h4 {
   font-weight: 500;
   margin-bottom: 0;
   text-align: left;
 }
-.cid-qFG3B51m2l p {
+.cid-qGKvgesi8n p {
   color: #767676;
   text-align: left;
 }
-.cid-qFG3B51m2l .card-box {
+.cid-qGKvgesi8n .card-box {
   padding-top: 2rem;
 }
-.cid-qFG3B51m2l .card-wrapper {
+.cid-qGKvgesi8n .card-wrapper {
   height: 100%;
 }
-.cid-qFG3B51m2l .card-title {
+.cid-qGKvgesi8n .card-title {
   color: #2b2b2b;
 }
-.cid-qFG3BQI9kE {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-qFG3BQI9kE .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-qFG3BQI9kE .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-qFG3BQI9kE .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-qFG3BQI9kE .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-qFG3BQI9kE .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #554346;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-}
-.cid-qFG3BQI9kE .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-qFG3BQI9kE .mbr-gallery-item > div:hover:before {
-  opacity: 0 !important;
-}
-.cid-qFG3BQI9kE .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-qFG3BQI9kE .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #554346 !important;
-  opacity: 0;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
+.cid-qGKvgesi8n P {
+  text-align: left;
 }
 .cid-qFHb4ld6ce .navbar {
   padding: .5rem 0;
@@ -2435,28 +2378,13 @@ body {
     padding: 15px;
   }
 }
-.cid-qFG51P6raR {
-  padding-top: 90px;
-  padding-bottom: 75px;
-  background-color: #ffffff;
+.cid-qGKBZDnr1i {
+  padding-top: 0px;
+  padding-bottom: 90px;
+  background: linear-gradient(45deg, #ffffff, #ffffff);
 }
-.cid-qFG51P6raR [class^="socicon-"]:before,
-.cid-qFG51P6raR [class*=" socicon-"]:before {
-  line-height: 44px;
-}
-.cid-qFG51P6raR .btn-social {
-  border-color: #149dcc;
-}
-.cid-qFG51P6raR .btn-social:hover {
-  background: #149dcc;
-}
-.cid-qFG51P6raR .btn-social:hover i.socicon {
-  color: #ffffff !important;
-}
-@media (max-width: 767px) {
-  .cid-qFG51P6raR .btn {
-    font-size: 20px !important;
-  }
+.cid-qGKBZDnr1i .btn {
+  margin: 0 0 .5rem 0;
 }
 .cid-qFG52w8bp5 {
   background: #ffffff;
@@ -3365,14 +3293,6 @@ body {
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
 }
-.cid-qFGhfDhdJH {
-  padding-top: 105px;
-  padding-bottom: 75px;
-  background-color: #ffffff;
-}
-.cid-qFGhfDhdJH .mbr-text {
-  color: #767676;
-}
 .cid-qFHbd65Gh0 .navbar {
   padding: .5rem 0;
   background: #ffffff;
@@ -3762,6 +3682,22 @@ body {
 .cid-qFHbd65Gh0 .dropdown-item:hover {
   color: #bf9175 !important;
 }
+.cid-qG3UjS0WHT {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-qG3UjS0WHT .mbr-text,
+.cid-qG3UjS0WHT blockquote {
+  color: #767676;
+}
+.cid-qG3UjS0WHT .mbr-text DIV {
+  text-align: left;
+  color: #232323;
+}
+.cid-qG3UjS0WHT .mbr-text {
+  color: #232323;
+}
 .cid-qFG8EhpwKT {
   padding-top: 105px;
   padding-bottom: 45px;
@@ -3777,7 +3713,7 @@ body {
   text-align: center;
 }
 .cid-qFGy94lwYp {
-  padding-top: 45px;
+  padding-top: 120px;
   padding-bottom: 120px;
   background-color: #ffffff;
 }
@@ -3813,73 +3749,6 @@ body {
 .cid-qFGy94lwYp P {
   text-align: center;
   color: #232323;
-}
-.cid-qFG8XpTXRP {
-  padding-top: 15px;
-  padding-bottom: 45px;
-  background-color: #818181;
-}
-@media (max-width: 767px) {
-  .cid-qFG8XpTXRP .content {
-    text-align: center;
-  }
-  .cid-qFG8XpTXRP .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-qFG8XpTXRP .media-wrap {
-    margin-bottom: 1rem;
-  }
-}
-.cid-qFG8XpTXRP .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
-}
-.cid-qFG8XpTXRP .media-wrap img {
-  height: 6rem;
-}
-@media (max-width: 767px) {
-  .cid-qFG8XpTXRP .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-qFG8XpTXRP .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-qFG8XpTXRP .footer-lower .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-}
-.cid-qFG8XpTXRP .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
-}
-.cid-qFG8XpTXRP .footer-lower .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-qFG8XpTXRP .footer-lower .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-qFG8XpTXRP .footer-lower .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-qFG8XpTXRP .footer-lower .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
 }
 .cid-qFHbfspLxs .navbar {
   padding: .5rem 0;
