--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2224,7 +2224,7 @@ body {
 .cid-qFG4MTMVoa {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #f1e7dd;
+  background-color: #efecec;
 }
 .cid-qFG4MTMVoa .card-img {
   background-color: #fff;
@@ -2242,7 +2242,7 @@ body {
 }
 .cid-qFG4MTMVoa .mbr-text {
   color: #232323;
-  text-align: left;
+  text-align: center;
 }
 .cid-qFG4MTMVoa .card-wrapper {
   height: 100%;
@@ -2287,7 +2287,7 @@ body {
 .cid-qFG4JLXrf2 {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #d4c3b2;
+  background-color: #cccbcb;
 }
 .cid-qFG4JLXrf2 .card-img {
   background-color: #fff;
@@ -2305,6 +2305,7 @@ body {
 }
 .cid-qFG4JLXrf2 .mbr-text {
   color: #232323;
+  text-align: center;
 }
 .cid-qFG4JLXrf2 .card-wrapper {
   height: 100%;
@@ -2343,7 +2344,7 @@ body {
 .cid-qFG4ORO3q0 {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #b6a28e;
+  background-color: #a6a4a4;
 }
 .cid-qFG4ORO3q0 .card-img {
   background-color: #fff;
@@ -2361,6 +2362,7 @@ body {
 }
 .cid-qFG4ORO3q0 .mbr-text {
   color: #232323;
+  text-align: center;
 }
 .cid-qFG4ORO3q0 .card-wrapper {
   height: 100%;
