--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1776,7 +1776,7 @@ body {
 }
 .cid-qFHb1sBF7R .nav-link:hover,
 .cid-qFHb1sBF7R .dropdown-item:hover {
-  color: #bf9175 !important;
+  color: #cc9e59 !important;
 }
 .cid-qFG3y5x1q4 {
   padding-top: 120px;
@@ -2205,7 +2205,7 @@ body {
 }
 .cid-qFHb4ld6ce .nav-link:hover,
 .cid-qFHb4ld6ce .dropdown-item:hover {
-  color: #bf9175 !important;
+  color: #cc9e59 !important;
 }
 .cid-qFG4IsTHG0 {
   padding-top: 120px;
@@ -2284,44 +2284,50 @@ body {
   font-size: 96px;
   color: #149dcc;
 }
-.cid-qFG4JLXrf2 {
+.cid-qGO9hZR33b {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #cccbcb;
+  background-color: #efecec;
 }
-.cid-qFG4JLXrf2 .card-img {
+.cid-qGO9hZR33b .card-img {
   background-color: #fff;
 }
-.cid-qFG4JLXrf2 .card-box {
+.cid-qGO9hZR33b .card-box {
   padding: 2rem;
 }
-.cid-qFG4JLXrf2 h4 {
+.cid-qGO9hZR33b h4 {
   font-weight: 500;
   margin-bottom: 0;
   text-align: left;
 }
-.cid-qFG4JLXrf2 p {
+.cid-qGO9hZR33b p {
   text-align: left;
 }
-.cid-qFG4JLXrf2 .mbr-text {
+.cid-qGO9hZR33b .mbr-text {
   color: #232323;
   text-align: center;
 }
-.cid-qFG4JLXrf2 .card-wrapper {
+.cid-qGO9hZR33b .card-wrapper {
   height: 100%;
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
   transition: box-shadow 0.3s;
 }
-.cid-qFG4JLXrf2 .card-wrapper:hover {
+.cid-qGO9hZR33b .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
 @media (min-width: 992px) {
-  .cid-qFG4JLXrf2 .my-col {
+  .cid-qGO9hZR33b .my-col {
     flex: 0 0 20%;
     max-width: 20%;
     padding: 15px;
   }
+}
+.cid-qGO9hZR33b .card-title {
+  color: #1e1e1e;
+}
+.cid-qGO9hZR33b .card-title B {
+  color: #232323;
 }
 .cid-qFG4SwP8Mb {
   padding-top: 0px;
@@ -2787,7 +2793,7 @@ body {
 }
 .cid-qFHb8hFveN .nav-link:hover,
 .cid-qFHb8hFveN .dropdown-item:hover {
-  color: #bf9175 !important;
+  color: #cc9e59 !important;
 }
 .cid-qFG5giYx2a {
   padding-top: 120px;
@@ -3217,7 +3223,7 @@ body {
 }
 .cid-qFHbavawXT .nav-link:hover,
 .cid-qFHbavawXT .dropdown-item:hover {
-  color: #bf9175 !important;
+  color: #cc9e59 !important;
 }
 .cid-qFG64SyluP {
   padding-top: 120px;
@@ -3682,7 +3688,7 @@ body {
 }
 .cid-qFHbd65Gh0 .nav-link:hover,
 .cid-qFHbd65Gh0 .dropdown-item:hover {
-  color: #bf9175 !important;
+  color: #cc9e59 !important;
 }
 .cid-qG3UjS0WHT {
   padding-top: 60px;
@@ -4139,7 +4145,7 @@ body {
 }
 .cid-qFHbfspLxs .nav-link:hover,
 .cid-qFHbfspLxs .dropdown-item:hover {
-  color: #bf9175 !important;
+  color: #cc9e59 !important;
 }
 .cid-qFG9HH61ce {
   padding-top: 90px;
@@ -4563,5 +4569,5 @@ body {
 }
 .cid-qFHbhEhAu8 .nav-link:hover,
 .cid-qFHbhEhAu8 .dropdown-item:hover {
-  color: #bf9175 !important;
+  color: #cc9e59 !important;
 }
