--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2,8 +2,6 @@
 
 
 
-
-
 body {
   font-style: normal;
   line-height: 1.5;
@@ -41,14 +39,14 @@ body {
   font-size: 1.92rem;
 }
 .display-5 {
-  font-family: 'Lato', sans-serif;
+  font-family: undefined;
   font-size: 1.5rem;
 }
 .display-5 > .mbr-iconfont {
   font-size: 2.4rem;
 }
 .display-7 {
-  font-family: 'Lato', sans-serif;
+  font-family: undefined;
   font-size: 0.8rem;
 }
 .display-7 > .mbr-iconfont {
@@ -647,7 +645,7 @@ a:hover {
   background-color: #f5f5f5;
   box-shadow: none;
   color: #565656;
-  font-family: 'Lato', sans-serif;
+  font-family: undefined;
   font-size: 0.8rem;
   line-height: 1.43;
   min-height: 3.5em;
