--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2,6 +2,8 @@
 
 
 
+
+
 body {
   font-style: normal;
   line-height: 1.5;
@@ -39,14 +41,14 @@ body {
   font-size: 1.92rem;
 }
 .display-5 {
-  font-family: undefined;
+  font-family: 'Lato', sans-serif;
   font-size: 1.5rem;
 }
 .display-5 > .mbr-iconfont {
   font-size: 2.4rem;
 }
 .display-7 {
-  font-family: undefined;
+  font-family: 'Lato', sans-serif;
   font-size: 0.8rem;
 }
 .display-7 > .mbr-iconfont {
@@ -645,7 +647,7 @@ a:hover {
   background-color: #f5f5f5;
   box-shadow: none;
   color: #565656;
-  font-family: undefined;
+  font-family: 'Lato', sans-serif;
   font-size: 0.8rem;
   line-height: 1.43;
   min-height: 3.5em;
